--- a/content/2201.md
+++ b/content/2201.md
@@ -4,9 +4,13 @@ Category: 操作影片
 Tags: nginx
 Author: 40523122
  
-使用Ubuntu桌面版的操作影片
+使用Ubuntu桌面版的操作影片<br/>
 
 <!-- PELICAN_END_SUMMARY -->
 
 <iframe src="https://player.vimeo.com/video/214970226" width="640" height="357" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/214970226">nginx</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p><a href="https://vimeo.com/214970226">nginx</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p> <br/>
+<br/>
+<br/>
+<br/>
+#心得:中途因為宿網的關係有點灰心，不過看到nginx跑出來時 只有一個字  爽!
