--- a/content/2204.md
+++ b/content/2204.md
@@ -4,9 +4,13 @@ Category: 操作影片
 Tags: nginx
 Author: 40523122
  
-設定fossil http 指令的操作影片
+設定fossil http 指令的操作影片<br/>
  
 <!-- PELICAN_END_SUMMARY -->
 
 <iframe src="https://player.vimeo.com/video/214970216" width="640" height="357" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/214970216">envirnment</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p><a href="https://vimeo.com/214970216">envirnment</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p><br/>
+<br/>
+<br/>
+<br/>
+#心得:雖然只是照著老師網誌的內容一步一步打，但自真的好多，而且打錯字要改超麻煩的，打字時要很小心。
