--- a/content/2205.md
+++ b/content/2205.md
@@ -4,9 +4,13 @@ Category: 操作影片
 Tags: ubuntu
 Author: 40523122
  
-設定ubuntu伺服器版的ipv4網路設定
+設定ubuntu伺服器版的ipv4網路設定<br/>
  
 <!-- PELICAN_END_SUMMARY -->
 
 <iframe src="https://player.vimeo.com/video/215008028" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/215008028">set netip</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p><a href="https://vimeo.com/215008028">set netip</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p><br/>
+<br/>
+<br/>
+<br/>
+#心得:因為宿網的關係，爬網翻譯英文，好不容易的成果，但還是怪怪的orz...
