--- a/content/2202.md
+++ b/content/2202.md
@@ -4,9 +4,13 @@ Category: 操作影片
 Tags: stunnel4
 Author: 40523122
  
-使用Ubuntu桌面版建立 Fossil SCM Server的操作影片
+使用Ubuntu桌面版建立 Fossil SCM Server的操作影片<br/>
 
 <!-- PELICAN_END_SUMMARY -->
 
 <iframe src="https://player.vimeo.com/video/214970230" width="640" height="357" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/214970230">stunnel4</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p><a href="https://vimeo.com/214970230">stunnel4</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p><br/>
+<br/>
+<br/>
+<br/>
+#心得:Ubuntu真是一大挑戰啊，習慣Windows後覺得自己是腦殘QAQ
