--- a/content/2203.md
+++ b/content/2203.md
@@ -4,9 +4,13 @@ Category: 操作影片
 Tags: server
 Author: 40523122
 
-使用stunnel建立fossil scm server
+使用stunnel建立fossil scm server<br/>
  
 <!-- PELICAN_END_SUMMARY -->
 
 <iframe src="https://player.vimeo.com/video/214970220" width="640" height="357" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/214970220">Fossil SCM</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p><a href="https://vimeo.com/214970220">Fossil SCM</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p><br/>
+<br/>
+<br/>
+<br/>
+#心得:最難的部分，還是因為不熟悉ubuntu系統，一直失敗...殘念，最後還是靠老師建好的vdi檔操作。
