--- a/content/2206.md
+++ b/content/2206.md
@@ -4,7 +4,11 @@ Category: 操作影片
 Tags: fossil
 Author: 40523122
  
-使用fossil clone等功能將mp4檔上傳至遠端fossil scm
+使用fossil clone等功能將mp4檔上傳至遠端fossil scm<br/>
  <!-- PELICAN_END_SUMMARY -->
 <iframe src="https://player.vimeo.com/video/215012605" width="640" height="343" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/215012605">fossil clone</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p><a href="https://vimeo.com/215012605">fossil clone</a> from <a href="https://vimeo.com/user58912544">JJC210</a> on <a href="https://vimeo.com">Vimeo</a>.</p><br/>
+<br/>
+<br/>
+<br/>
+#心得:跟github不一樣的上傳方式，雖然都還有add、commit但還是不一樣的感覺。
