--- a/content/2207.md
+++ b/content/2207.md
@@ -14,3 +14,7 @@ Author: 40523122
 6.將要上傳的東西複製進新創之資料夾<br/>
 7.fossil add ..................          加入所有更動<br/>
 8.fossil commit -m "訊息" .................   提交並附帶訊息<br/>
+<br/>
+<br/>
+<br/>
+#心得:利用 Fossil SCM 管理 mp4 影片檔案影片的註解。
