--- a/content/2200.md
+++ b/content/2200.md
@@ -18,7 +18,7 @@ Author: 40523122
 若一端為568B另一端為568A 為對接線<br/>
 <br/>
 製作方式:<br/>
-剝皮->內線(不剝皮)依上述兩方法排列->確定線頭整齊後插入接頭->確定差至最深->使用壓軸夾緊接頭<br/>
+剝皮->內線(不剝皮)依上述兩方法排列->確定線頭整齊後插入接頭->確定插至最深->使用壓軸夾緊接頭<br/>
 <br/>
 <br/>
 <br/>
