--- a/content/2208.md
+++ b/content/2208.md
@@ -1,7 +1,51 @@
-Title: git push 時 error
+Title: git push 時 error解決方法
 Date: 2017-05-16 13:00
 Category: 筆記
 Tags: 心得
 Author: 40523122
+
+列出所有git push 時發生過並解決的問題。
  <!-- PELICAN_END_SUMMARY -->
-<span class="pic"><img src="(./../picture/error1.PNG)"width="640" height="480"></span>
+<h2>狀況1 ：</h2>
+<h3>
+若發生與(圖1)相同時:<br/>
+ <br/>
+<img src="./../picture/error1.png" /></p>
+<p align="center">(圖1)</p>
+解決方法:<br/>
+表示版本不同，所以產生衝突，這時使用 git pull 指令，使近端版本與遠端相同，接著git psush origin就能成功。
+</h3>
+<br/>
+<h2>狀況2 ：</h2>
+<h3>
+若blog裡有leo編輯器裡沒有(已刪除)的網誌:<br/>
+解決方法:<br/>
+表示content資料夾裡有問題，因為在leo編輯器裡刪除@edit檔案並不會刪除原檔案，故必須到content資料夾裡手動刪除不需要的資料。<br/>
+</h3>
+<br/>
+<h2>狀況3 ：</h2>
+<h3>
+若打開blog時為404:<br/>
+可能原因1:<br/>
+與狀況2同<br/>
+<br/>
+可能原因2:<br/>
+blog資料夾裡有問題，判斷方式為裡面是否有index.html<br/>
+解決方法:<br/>
+將blog資料夾裡所有資料刪除後，到leo編輯器裡重新pelican-blog一次。<br/>
+<br/>
+可能原因3:<br/>
+contend裡的.md檔案Title重複造成錯誤。<br/>
+解決方法:<br/>
+更改Title便可。
+</h3>
+<br/>
+<h2>狀況4 ：</h2>
+<h3>
+git add -A時出現(圖2)狀況:<br/>
+<br/>
+<img src="./../picture/error2.png" /></p>
+<p align="center">(圖2)</p>
+解決方法:<br/>
+暫時忽略，繼續動作。
+</h3>
