--- a/content/2208.md
+++ b/content/2208.md
@@ -10,7 +10,7 @@ Author: 40523122
 <h3>
 若發生與(圖1)相同時:<br/>
  <br/>
-<img src="https://raw.githubusercontent.com/s40523122/2017springwcm_hw/gh-pages/picture/error1.png" /></p>
+<img src="https://raw.githubusercontent.com/s40523122/2017springwcm_hw/gh-pages/picture/error1.PNG" /></p>
 <p align="center">(圖1)</p>
 解決方法:<br/>
 表示版本不同，所以產生衝突，這時使用 git pull 指令，使近端版本與遠端相同，接著git psush origin就能成功。
@@ -44,7 +44,7 @@ contend裡的.md檔案Title重複造成錯誤。<br/>
 <h3>
 git add -A時出現(圖2)狀況:<br/>
 <br/>
-<img src="https://raw.githubusercontent.com/s40523122/2017springwcm_hw/gh-pages/picture/error2.png" /></p>
+<img src="https://raw.githubusercontent.com/s40523122/2017springwcm_hw/gh-pages/picture/error2.PNG" /></p>
 <p align="center">(圖2)</p>
 解決方法:<br/>
 暫時忽略，繼續動作。 
