--- a/content/2200.md
+++ b/content/2200.md
@@ -9,10 +9,13 @@ Author: 40523122
 <!-- PELICAN_END_SUMMARY -->
 
 兩種接頭 <br/>
-標準接線568B:<br/>
-橘白 橘 綠白 藍 藍白 綠 褐白 褐<br/>
-電腦對接568A:<br/>
-綠白 綠 橘白 藍 藍白 橘 褐白 褐<br/>
+
+網路線製作有兩種接頭，分別是<br/>
+T568A<br/>
+<font color="#00ff00">綠白</font>	 <font color="#00ff00">綠</font>	 <font color="#FF5511">橘白</font> <font color="#0080ff">藍</font> <font color="#0080ff">藍白</font> <font color="#FF5511">橘</font> <font color="#BB5500">棕白</font> <font color="#BB5500">棕</font><br/>
+T568B<br/>
+<font color="#FF5511">橘白</font> <font color="#FF5511">橘</font> <font color="#00ff00">綠白</font>	 <font color="#0080ff">藍</font> <font color="#0080ff">藍白</font> <font color="#00ff00">綠</font>	 <font color="#BB5500">棕白</font> <font color="#BB5500">棕</font><br/>
+
   <br/>
 若兩端皆為568B 為網路線<br/>
 若一端為568B另一端為568A 為對接線<br/>
@@ -24,5 +27,5 @@ Author: 40523122
 <br/>
 <br/>
 #心得:<br/>
-測試失敗原因可能是因為內線有剝線，或是線頭沒齊。<br/>
+##測試失敗原因可能是因為內線有剝線，或是線頭沒齊。<br/>
  
