--- a/content/2201.md
+++ b/content/2201.md
@@ -13,4 +13,5 @@ Author: 40523122
 <br/>
 <br/>
 <br/>
-#心得:中途因為宿網的關係有點灰心，不過看到nginx跑出來時 只有一個字  爽!
+#心得:<br/>
+##中途因為宿網的關係有點灰心，不過看到nginx跑出來時 只有一個字  爽!
