--- a/content/2203.md
+++ b/content/2203.md
@@ -13,4 +13,5 @@ Author: 40523122
 <br/>
 <br/>
 <br/>
-#心得:最難的部分，還是因為不熟悉ubuntu系統，一直失敗...殘念，最後還是靠老師建好的vdi檔操作。
+#心得:<br/>
+##最難的部分，還是因為不熟悉ubuntu系統，一直失敗...殘念，最後還是靠老師建好的vdi檔操作。
