--- a/content/2204.md
+++ b/content/2204.md
@@ -13,4 +13,5 @@ Author: 40523122
 <br/>
 <br/>
 <br/>
-#心得:雖然只是照著老師網誌的內容一步一步打，但自真的好多，而且打錯字要改超麻煩的，打字時要很小心。
+#心得:<br/>
+##雖然只是照著老師網誌的內容一步一步打，但自真的好多，而且打錯字要改超麻煩的，打字時要很小心。
