--- a/content/2206.md
+++ b/content/2206.md
@@ -11,4 +11,5 @@ Author: 40523122
 <br/>
 <br/>
 <br/>
-#心得:跟github不一樣的上傳方式，雖然都還有add、commit但還是不一樣的感覺。
+#心得:<br/>
+##步驟詳細說明放在<a href="https://localhost:6443/blog/fossil-scm-ti-jiao-bu-zou.html"><font color="#0066FF">Fossil提交步驟</font></a> 內。
