--- a/content/2207.md
+++ b/content/2207.md
@@ -16,4 +16,5 @@ Author: 40523122
 8.fossil commit -m "訊息" .................   提交並附帶訊息<br/>
 <br/>
 <br/>
-#心得:利用 Fossil SCM 管理 mp4 影片檔案影片的註解。    
+#心得:<br/>
+##利用 Fossil SCM 管理 mp4 影片檔案影片的註解。    
